feat: Connect aws cloud database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,15 @@
 spring.config.import=classpath:secret.properties
 
-spring.security.user.name=${spring.security.user.name}
-spring.security.user.password=${spring.security.user.password}
+#spring.security.user.name=${spring.security.user.name}
+#spring.security.user.password=${spring.security.user.password}
+
+server.port=8080
+
+spring.datasource.url=jdbc:mysql://bank-springsecurity.c96ewaucsrty.ap-southeast-2.rds.amazonaws.com/eazybank
+spring.datasource.username=${spring.datasource.username}
+spring.datasource.password=${spring.datasource.password}
+#spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
