feat: Add login func

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.config.import=classpath:secret.properties
 
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://bank-springsecurity.c96ewaucsrty.ap-southeast-2.rds.amazonaws.com/eazybank
+#spring.datasource.url=jdbc:mysql://bank-springsecurity.c96ewaucsrty.ap-southeast-2.rds.amazonaws.com/eazybank
+spring.datasource.url=jdbc:mysql://localhost:3306/bank_security
 spring.datasource.username=${spring.datasource.username}
 spring.datasource.password=${spring.datasource.password}
 #spring.jpa.hibernate.ddl-auto=create-drop
